@@ -1201,7 +1201,6 @@ cl_symbols[] = {
 {SYS_ "STRUCTURE-INCLUDE",NULL},
 #else
 {SYS_ "CHANGE-INSTANCE",NULL},
-{SYS_ "COMPUTE-EFFECTIVE-METHOD",NULL},
 {SYS_ "COPY-INSTANCE","si_copy_instance"},
 {SYS_ "GENERIC-FUNCTION-P","si_generic_function_p"},
 {SYS_ "INSTANCE-REF-SAFE","si_instance_ref_safe"},
@@ -1523,16 +1522,90 @@ cl_symbols[] = {
 {SYS_ "*EXIT-HOOKS*",NULL},
 
 #ifdef CLOS
+{CLOS_ "ACCESSOR-METHOD",NULL},
+{CLOS_ "ACCESSOR-METHOD-SLOT-DEFINITION",NULL},
+{CLOS_ "ADD-DEPENDENT",NULL},
+{CLOS_ "ADD-DIRECT-METHOD",NULL},
+{CLOS_ "ADD-DIRECT-SUBCLASS",NULL},
+{CLOS_ "CLASS-DEFAULT-INITARGS",NULL},
+{CLOS_ "CLASS-DIRECT-DEFAULT-INITARGS",NULL},
+{CLOS_ "CLASS-DIRECT-SLOTS",NULL},
+{CLOS_ "CLASS-DIRECT-SUBCLASSES",NULL},
+{CLOS_ "CLASS-DIRECT-SUPERCLASSES",NULL},
+{CLOS_ "CLASS-FINALIZED-P",NULL},
+{CLOS_ "CLASS-PRECEDENCE-LIST",NULL},
+{CLOS_ "CLASS-PROTOTYPE",NULL},
+{CLOS_ "CLASS-SLOTS",NULL},
+{CLOS_ "COMPUTE-APPLICABLE-METHODS-USING-CLASSES",NULL},
+{CLOS_ "COMPUTE-CLASS-PRECEDENCE-LIST",NULL},
+{CLOS_ "COMPUTE-DEFAULT-INITARGS",NULL},
+{CLOS_ "COMPUTE-DISCRIMINATING-FUNCTION",NULL},
+{CLOS_ "COMPUTE-EFFECTIVE-METHOD",NULL},
+{CLOS_ "COMPUTE-EFFECTIVE-SLOT-DEFINITION",NULL},
+{CLOS_ "COMPUTE-SLOTS",NULL},
+{CLOS_ "DIRECT-SLOT-DEFINITION",NULL},
+{CLOS_ "DIRECT-SLOT-DEFINITION-CLASS",NULL},
+{CLOS_ "EFFECTIVE-SLOT-DEFINITION",NULL},
+{CLOS_ "EFFECTIVE-SLOT-DEFINITION-CLASS",NULL},
+{CLOS_ "ENSURE-CLASS",NULL},
+{CLOS_ "ENSURE-CLASS-USING-CLASS",NULL},
+{CLOS_ "ENSURE-GENERIC-FUNCTION-USING-CLASS",NULL},
+{CLOS_ "EQL-SPECIALIZER",NULL},
+{CLOS_ "EQL-SPECIALIZER-OBJECT",NULL},
+{CLOS_ "EXTRACT-LAMBDA-LIST",NULL},
+{CLOS_ "EXTRACT-SPECIALIZER-NAMES",NULL},
+{CLOS_ "FINALIZE-INHERITANCE",NULL},
+{CLOS_ "FIND-METHOD-COMBINATION",NULL},
+{CLOS_ "FORWARD-REFERENCED-CLASS",NULL},
+{CLOS_ "FUNCALLABLE-",NULL},
+{CLOS_ "FUNCALLABLE-STANDARD-CLASS",NULL},
+{CLOS_ "FUNCALLABLE-STANDARD-INSTANCE-ACCESS",NULL},
+{CLOS_ "GENERIC-FUNCTION-ARGUMENT-PRECEDENCE-ORDER",NULL},
+{CLOS_ "GENERIC-FUNCTION-DECLARATIONS",NULL},
+{CLOS_ "GENERIC-FUNCTION-LAMBDA-LIST",NULL},
+{CLOS_ "GENERIC-FUNCTION-METHOD-CLASS",NULL},
+{CLOS_ "GENERIC-FUNCTION-METHOD-COMBINATION",NULL},
+{CLOS_ "GENERIC-FUNCTION-METHODS",NULL},
+{CLOS_ "GENERIC-FUNCTION-NAME",NULL},
+{CLOS_ "INTERN-EQL-SPECIALIZER",NULL},
+{CLOS_ "MAKE-METHOD-LAMBDA",NULL},
+{CLOS_ "MAP-DEPENDENTS",NULL},
+{CLOS_ "METAOBJECT",NULL},
+{CLOS_ "METHOD-FUNCTION",NULL},
+{CLOS_ "METHOD-GENERIC-FUNCTION",NULL},
+{CLOS_ "METHOD-LAMBDA-LIST",NULL},
+{CLOS_ "METHOD-SPECIALIZERS",NULL},
+{CLOS_ "READER-METHOD-CLASS",NULL},
+{CLOS_ "REMOVE-DEPENDENT",NULL},
+{CLOS_ "REMOVE-DIRECT-METHOD",NULL},
+{CLOS_ "REMOVE-DIRECT-SUBCLASS",NULL},
+{CLOS_ "SET-FUNCALLABLE-INSTANCE-FUNCTION",NULL},
+{CLOS_ "SLOT-BOUNDP-USING-CLASS",NULL},
 {CLOS_ "SLOT-DEFINITION",NULL},
 {CLOS_ "SLOT-DEFINITION-ALLOCATION",NULL},
 {CLOS_ "SLOT-DEFINITION-INITARGS",NULL},
 {CLOS_ "SLOT-DEFINITION-INITFORM",NULL},
 {CLOS_ "SLOT-DEFINITION-INITFUNCTION",NULL},
+{CLOS_ "SLOT-DEFINITION-LOCATION",NULL},
 {CLOS_ "SLOT-DEFINITION-NAME",NULL},
-{CLOS_ "SLOT-DEFINITION-TYPE",NULL},
 {CLOS_ "SLOT-DEFINITION-READERS",NULL},
+{CLOS_ "SLOT-DEFINITION-TYPE",NULL},
 {CLOS_ "SLOT-DEFINITION-WRITERS",NULL},
-{CLOS_ "SLOT-DEFINITION-DOCUMENTATION",NULL},
+{CLOS_ "SLOT-MAKUNBOUND-USING-CLASS",NULL},
+{CLOS_ "SLOT-VALUE-USING-CLASS",NULL},
+{CLOS_ "SPECIALIZER",NULL},
+{CLOS_ "SPECIALIZER-DIRECT-GENERIC-FUNCTIONS",NULL},
+{CLOS_ "SPECIALIZER-DIRECT-METHODS",NULL},
+{CLOS_ "STANDARD-",NULL},
+{CLOS_ "STANDARD-DIRECT-SLOT-DEFINITION",NULL},
+{CLOS_ "STANDARD-EFFECTIVE-SLOT-DEFINITION",NULL},
+{CLOS_ "STANDARD-INSTANCE-ACCESS",NULL},
+{CLOS_ "STANDARD-READER-METHOD",NULL},
+{CLOS_ "STANDARD-SLOT-DEFINITION",NULL},
+{CLOS_ "STANDARD-WRITER-METHOD",NULL},
+{CLOS_ "UPDATE-DEPENDENT",NULL},
+{CLOS_ "VALIDATE-SUPERCLASS",NULL},
+{CLOS_ "WRITER-METHOD-CLASS",NULL},
 #endif
 
 {SYS_ "CL-FIXNUM-BITS",NULL},
